Fixed the overflow property for left menu bar

--- a/src/app/side-menu/side-menu.component.scss
+++ b/src/app/side-menu/side-menu.component.scss
@@ -23,6 +23,7 @@
     background-color: #f4f4f4;
     border-width: thin;
     height: 38rem;
+    overflow: auto;
 }
 
 .menu-btn {
@@ -99,11 +100,12 @@
 
 .new-list {
     background: transparent;
+    width: 100px;
     font-size: 0.9rem;
     border: none;
     color: #75756ff0;
     padding: 2%;
-    padding-left: 10%;
+    padding-left: 16%;
     outline: none;
 }
 
@@ -263,7 +265,7 @@ input:hover {
     background-size: contain;
     background-repeat: no-repeat;
     height: 1.2rem;
-    width: 100px;
+    width: 30px;
 }
 
 .alarm-icon {
