--- a/src/app/sub-task/sub-task.component.scss
+++ b/src/app/sub-task/sub-task.component.scss
@@ -1,9 +1,9 @@
 .task-info {
-    width: 110%;
+    width: 120%;
     display: none;
+    height:38rem;
+    overflow: auto;
     background-color: #f5f5f5;
-    height: 37rem;
-    overflow-x: auto; 
 }
 
 .view-info {
@@ -36,12 +36,6 @@
 
 .task-header span {
     margin: -5% 0 0 5%;
-}
-
-.header-imp-icon {
-    margin: 0 0 0 74%;
-    color: #50504cfa;
-    font-size: 1.3rem;
 }
 
 .add-step {
@@ -136,6 +130,8 @@
     padding: 1%;
     margin-top: 4%;
     display: flex;
+    margin-left: 3%;
+    width: 92%;
 }
 
 .minimize { 
@@ -239,7 +235,7 @@
 
 .delete-icon {
     color: red;
-    margin-left: 80%;
+    margin-left: 85%;
 }
 
 .hide-modal {
@@ -366,10 +362,3 @@
     width: 100px;
 }
 
-.align-margin {
-    margin-left : 85%;
-}
-
-.remove-margin {
-    margin-left: 0;
-}
