--- a/src/app/task-component/task.component.scss
+++ b/src/app/task-component/task.component.scss
@@ -50,7 +50,7 @@ input:hover {
 .added-task {
     color: #1579CE;
     margin: 2% 0 0 3%;
-    width: 350%;
+    width: 250%;
     display: flex;
     padding-top: 5%;
     cursor: pointer;
@@ -65,7 +65,7 @@ input:hover {
 .add-new-task {
     color: #1579CE;
     margin: 2% 0 0 3%;
-    width: 350%;
+    width: 250%;
     display: flex;
     padding-bottom: 3%;
     border-color: #50504cfa;
@@ -80,7 +80,7 @@ input:hover {
 }
 
 .add-task-input {
-    width: 350%;
+    width: 250%;
     padding: 1%;
     font-size: 1rem;
     margin: 0 0 0 1%;
@@ -163,9 +163,9 @@ input:hover {
 }
 
 .align-margin {
-    margin-left : 152.5%;
+    margin-left : 127.5%;
 }
 
 .remove-margin {
-    margin-left: 115%;
+    margin-left: 90%;
 }
